<resources>
    <string name="app_name">YuYiDoctorPad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_tv">最新</string>
    <string name="hot_tv">热门</string>
    <string name="select_tv">精选</string>
    <string name="comment_hint">说点什么吧...</string>
    <string name="hospital_name">医院名称</string>
    <string name="hospital_grade">医院等级</string>
    <string name="hospital_content">医院简介</string>
    <string name="hospital_telephone">固定电话</string>
    <string name="hospital_picture">医院图片</string>
    <string name="hospital_book">相关证书</string>
    <string name="hospital_next">下一步</string>
    <string name="manager_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="manager_job">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位</string>
    <string name="manager_email">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱</string>
    <string name="manager_phone">联系电话</string>
    <string name="submit_success">提交审核成功</string>
    <string name="submit_time">需2一7个工作日的审核时间</string>
    <string name="submit_phone">有疑问请拨打电话: 0321-3850331</string>
    <string name="submit_back">返回</string>
    <string name="imformation_recommend">推荐</string>
    <string name="imformation_new">最新</string>
    <string name="comment_hint_edit">写评论</string>
    <string name="hospital_homepage">医院主页</string>
    <string name="hospital_department">科室信息</string>
    <string name="hospital_doctor">医生信息</string>
    <string name="hospital_num_set">挂号设置</string>
    <string name="hospital_information">资讯发布</string>
    <string name="add_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="add_job">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称</string>
    <string name="add_department">科&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;室</string>
    <string name="add_telephone">手机号码</string>
    <string name="add_power">权限设置</string>
    <string name="add_ask">咨询权限</string>
    <string name="add_data">查看数据权限</string>
    <string name="add_num">挂号接受权限</string>
    <string name="infor_time">时间排序</string>
    <string name="infor_way">发布渠道</string>
    <string name="post_img">图&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;片</string>
    <string name="post_title">标&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题</string>
    <string name="post_small_title">小&#160;&#160;标&#160;&#160;题</string>
    <string name="post_content">内&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;容</string>
    <string name="post_way">发布渠道</string>


    <string name="_90mmhg_140mmhg"><![CDATA[90mmHg<收缩压<140mmHg]]></string>
    <string name="_60mmhg_90mmhg"><![CDATA[60mmHg<舒张压<90mmHg]]></string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="my_settings_aboutOurs_msg">宇医app，希望通过网上医疗的形式能够解决用户的一些医疗的基本需求，包括：测量监控自己及家人的健康数据；足不出户解决购药问题；提前预约专家挂号问题；在家与医生面对面交流，解决一些简单的问诊等</string>
    <string name="my_settings_aboutOurs_versionCode">当前版本号：1.0（wanyu2017）</string>
</resources>
