<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.technology.yuyidoctorpad.fragment.HospitalFragment.SubmitMessageFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/finish_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/finish" />

        <TextView
            android:id="@+id/submit_success_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finish_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/submit_success"
            android:textColor="@color/color_666666"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/submit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit_success_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/submit_time"
            android:textColor="@color/color_666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/submit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit_time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/submit_phone"
            android:textColor="@color/color_666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/submit_back_btn"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_below="@+id/submit_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/hospital_next_bg"
            android:gravity="center"
            android:text="@string/submit_back"
            android:textColor="@color/color_ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>
