<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.technology.yuyidoctorpad.fragment.HospitalFragment.ManagerMessageFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp">

        <!--名称-->
        <RelativeLayout
            android:id="@+id/manager_name_rl"
            android:layout_width="wrap_content"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/maneger_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/manager_name"
                android:textColor="@color/color_555555"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/manager_name_edit"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/maneger_name_tv"
                android:background="@drawable/hospital_bg"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/color_333333"
                android:textSize="15sp" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/manager_job_rl"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/manager_name_rl"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/maneger_job_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/manager_job"
                android:textColor="@color/color_555555"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/manager_job_edit"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/maneger_job_tv"
                android:background="@drawable/hospital_bg"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/color_333333"
                android:textSize="15sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manager_email_rl"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/manager_job_rl"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/maneger_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/manager_email"
                android:textColor="@color/color_555555"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/manager_email_edit"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/maneger_email_tv"
                android:background="@drawable/hospital_bg"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_333333"
                android:textSize="15sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manager_phone_rl"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/manager_email_rl"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/maneger_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/manager_phone"
                android:textColor="@color/color_555555"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/manager_phone_edit"
                android:layout_width="225dp"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/maneger_phone_tv"
                android:background="@drawable/hospital_bg"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/color_333333"
                android:textSize="15sp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/manager_next_btn"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_below="@+id/manager_phone_rl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@drawable/hospital_next_bg"
            android:gravity="center"
            android:text="@string/hospital_next"
            android:textColor="@color/color_ffffff"
            android:textSize="18sp" />
    </RelativeLayout>
</RelativeLayout>
